# showcase

./: CHANGELOG.md  showcase.cabal
app/: Main.hs
app/Showcase/Internal/: FileWatch.hs
app/Showcase/Types/: EntryPoint.hs  Route.hs
data/: 2023-08-11-01-43-29.dhall  builder.dhall  index.dhall  website.dhall
data/indices/: 2023.dhall
data/items/: 2023-08-11-01-43-29.dhall
data/page/: catalog.html  index.html
data/vod/: 2023-08-11-01-43-29.dhall  template.html
