cabal-version: 2.4
name: showcase
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable showcase
    main-is: Main.hs
    hs-source-dirs: app

    default-language: Haskell2010
    default-extensions:
        OverloadedStrings

    ghc-options:
        -Wall

    build-depends:
        async ^>=2.2.4,
        base ^>=4.16.4.0,
        dhall ^>=1.41.2,
        directory ^>=1.3.6.2,
        filepath ^>=1.4.2.1,
        fsnotify ^>=0.4.1.0,
        relude ^>= 1.2.0.0,
        text ^>=1.2.5.0,
        wai-app-static ^>=3.1.7.4,
        warp ^>=3.3.28,
    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude,
