cabal-version: 2.4
name: showcase
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable showcase
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Showcase.Internal.FileWatch

    default-language: Haskell2010
    default-extensions:
        DerivingStrategies,
        GeneralizedNewtypeDeriving,
        OverloadedStrings

    ghc-options:
        -Wall

    build-depends:
        aeson ^>=2.1.2.1,
        async ^>=2.2.4,
        base ^>=4.16.4.0,
        dhall ^>=1.41.2,
        dhall-json ^>=1.7.11,
        directory ^>=1.3.6.2,
        doclayout ^>=0.4.0.1,
        doctemplates ^>=0.11,
        path ^>=0.9.2,
        fsnotify ^>=0.4.1.0,
        relude ^>= 1.2.0.0,
        text ^>=1.2.5.0,
        wai-app-static ^>=3.1.7.4,
        warp ^>=3.3.28,
    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude,
